// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback error message 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-top: 8px;
  margin-bottom: 24px;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding: 32px;
  width: 540px;
  color: #FFFFFF;
  background-color: #344179;
}

.c2 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  text-align: center;
}

.c0 {
  display: block;
  outline: none;
  margin-top: 48px;
  margin-bottom: 48px;
  margin-left: auto;
  margin-right: auto;
  max-width: 200px;
  max-height: 120px;
}

.c6 {
  color: #009EFF;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1 c2"
    color="text.main"
    width="540px"
  >
    <div
      class="c3"
    >
      Login Unsuccessful
    </div>
    <div
      class="c4"
      kind="danger"
    >
      custom message
    </div>
     
    <div
      class="c5"
    >
      <a
        class="c6"
        href="/web/login"
      >
        Please attempt to log in again.
      </a>
    </div>
  </div>
</div>
`;

exports[`default error message 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-top: 8px;
  margin-bottom: 24px;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  padding: 32px;
  width: 540px;
  color: #FFFFFF;
  background-color: #344179;
}

.c2 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  text-align: center;
}

.c0 {
  display: block;
  outline: none;
  margin-top: 48px;
  margin-bottom: 48px;
  margin-left: auto;
  margin-right: auto;
  max-width: 200px;
  max-height: 120px;
}

.c6 {
  color: #009EFF;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1 c2"
    color="text.main"
    width="540px"
  >
    <div
      class="c3"
    >
      Login Unsuccessful
    </div>
    <div
      class="c4"
      kind="danger"
    >
      unable to login, please check Teleport's log for details
    </div>
     
    <div
      class="c5"
    >
      <a
        class="c6"
        href="/web/login"
      >
        Please attempt to log in again.
      </a>
    </div>
  </div>
</div>
`;
